--- a/index.html
+++ b/index.html
@@ -8,10 +8,25 @@
   <title>Document</title>
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
+  <div class="topnav">
+    <a href="#home" class="active">Logo</a>
+    <nav id="myLinks">
+      <a href="#HOME">News</a>
+      <a href="#IPO">Contact</a>
+      <a href="#LEERLIJN">About</a>
+      <a href="#CONTACT">News</a>
+    </nav>
+    <a href="javascript:void(0);" class="icon" onclick="myNav()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
 
+
+  <script src="js/index.js"></script>
 </body>
 
 </html>
