--- a/index.html
+++ b/index.html
@@ -12,19 +12,21 @@
 </head>
 
 <body>
-  <div class="topnav">
-    <a href="#home" class="active">Logo</a>
-    <nav id="myLinks">
-      <a href="#HOME">News</a>
-      <a href="#IPO">Contact</a>
-      <a href="#LEERLIJN">About</a>
-      <a href="#CONTACT">News</a>
-    </nav>
-    <a href="javascript:void(0);" class="icon" onclick="myNav()">
-      <i class="fa fa-bars"></i>
-    </a>
+  <div class="mobile-container">
+    <div class="topnav">
+      <a href="#home" class="active">Logo</a>
+      <nav id="myLinks">
+        <a href="#home">HOME</a>
+        <a href="#ipo">IPO</a>
+        <a href="#leerlijn">LEERLIJN</a>
+        <a href="#contact">CONTACT</a>
+      </nav>
+      <a href="javascript:void(0);" class="icon" onclick="myNav()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
   </div>
-
+  <!----------------------------------------deb---------------------------------->
 
   <script src="js/index.js"></script>
 </body>
