--- a/index.html
+++ b/index.html
@@ -12,22 +12,50 @@
 </head>
 
 <body>
-  <div class="mobile-container">
-    <div class="topnav">
-      <a href="#home" class="active">Logo</a>
-      <nav id="myLinks">
-        <a href="#home">HOME</a>
-        <a href="#ipo">IPO</a>
-        <a href="#leerlijn">LEERLIJN</a>
-        <a href="#contact">CONTACT</a>
-      </nav>
-      <a href="javascript:void(0);" class="icon" onclick="myNav()">
-        <i class="fa fa-bars"></i>
-      </a>
-    </div>
+  <!-- NAVIGATION -->
+  <nav>
+  <div class="topnav" id="myTopnav">
+    <a href="#home" class="active">Home</a>
+    <a href="#news">News</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+    <a href="javascript:void(0);" class="icon" onclick="myNav()">
+      <i class="fa fa-bars"></i>
+    </a>
   </div>
-  <!----------------------------------------deb---------------------------------->
+</nav>
+<!-- END NAVIGATION -->
 
+<!-- START HOMEPAGE -->
+<div class="homePage">
+
+
+
+
+
+</div>
+<!-- END HOMEPAGE -->
+
+<!-- START SECOND PAGE -->
+<div class="secondPage">
+
+
+</div>
+<!-- END SECOND PAGE -->
+
+<!-- START THIRD PAGE -->
+<div class="thirdPage">
+
+
+
+</div>
+<!-- END ThIRD PAGE -->
+
+
+<!-- CONTACT -->
+<div class="contactPage">
+
+</div>
   <script src="js/index.js"></script>
 </body>
 
