--- a/index.html
+++ b/index.html
@@ -14,48 +14,49 @@
 <body>
   <!-- NAVIGATION -->
   <nav>
-  <div class="topnav" id="myTopnav">
-    <a href="#home" class="active">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
-    <a href="javascript:void(0);" class="icon" onclick="myNav()">
-      <i class="fa fa-bars"></i>
-    </a>
+    <div class="topnav" id="myTopnav">
+      <a href="#logo" class="active">LOGO</a>
+      <a href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+      <a href="javascript:void(0);" class="icon" onclick="myNav()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+  </nav>
+  <!-- END NAVIGATION -->
+
+  <!-- START HOMEPAGE -->
+  <div class="homePage">
+
+
+
+
+
   </div>
-</nav>
-<!-- END NAVIGATION -->
+  <!-- END HOMEPAGE -->
 
-<!-- START HOMEPAGE -->
-<div class="homePage">
-
+  <!-- START SECOND PAGE -->
+  <div class="secondPage">
 
 
+  </div>
+  <!-- END SECOND PAGE -->
 
-
-</div>
-<!-- END HOMEPAGE -->
-
-<!-- START SECOND PAGE -->
-<div class="secondPage">
-
-
-</div>
-<!-- END SECOND PAGE -->
-
-<!-- START THIRD PAGE -->
-<div class="thirdPage">
+  <!-- START THIRD PAGE -->
+  <div class="thirdPage">
 
 
 
-</div>
-<!-- END ThIRD PAGE -->
+  </div>
+  <!-- END ThIRD PAGE -->
 
 
-<!-- CONTACT -->
-<div class="contactPage">
+  <!-- CONTACT -->
+  <div class="contactPage">
 
-</div>
+  </div>
   <script src="js/index.js"></script>
 </body>
 
