--- a/index.html
+++ b/index.html
@@ -13,21 +13,19 @@
 
 <body>
   <!-- NAVIGATION -->
+  <div class="logo"><a href="index.html"><img src="/img/Logo.png"></a>
+  </div>
   <nav>
     <div class="topnav" id="myTopnav">
-      <a href="#logo" class="active">LOGO</a>
       <a href="#home">Home</a>
       <a href="#news">News</a>
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
-      <a href="javascript:void(0);" class="icon" onclick="myNav()">
-        <i class="fa fa-bars"></i>
-      </a>
     </div>
   </nav>
   <!-- END NAVIGATION -->
 
-  <!-- START HOMEPAGE -->
+  <!-- START HOMEPAGE ZANI en WAIL --> 
   <div class="homePage">
 
 
@@ -37,24 +35,24 @@
   </div>
   <!-- END HOMEPAGE -->
 
-  <!-- START SECOND PAGE -->
+  <!-- START SECOND PAGE  ABDELLA EN NAWFAL-->
   <div class="secondPage">
 
 
   </div>
   <!-- END SECOND PAGE -->
 
-  <!-- START THIRD PAGE -->
+  <!-- START THIRD PAGE WAIL -->
   <div class="thirdPage">
 
 
 
   </div>
-  <!-- END ThIRD PAGE -->
+  <!-- END THIRD PAGE -->
 
 
-  <!-- CONTACT -->
-  <div class="contactPage">
+  <!-- SCHEMA  SETH-->
+  <div class="schemaPage">
 
   </div>
   <script src="js/index.js"></script>
