--- a/index.html
+++ b/index.html
@@ -27,11 +27,15 @@
 
   <!-- START HOMEPAGE ZANI en WAIL --> 
   <div class="homePage">
-
-
-
-
-
+    <div class="container">
+      <div class="background-image">
+        <div class="header-one">
+          <h1><span class="red-color">INTERPROFESSIONEEL</span> ONDERWIJS</h1>
+          </div>
+        
+      </div>
+      <img src="/img/homepage.png" style="width: 100%;">
+    </div>
   </div>
   <!-- END HOMEPAGE -->
 
