--- a/index.html
+++ b/index.html
@@ -18,21 +18,20 @@
   <nav>
     <div class="topnav" id="myTopnav">
       <a href="#home">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
+      <a href="#IPO">IPO</a>
+      <a href="#leerlijn">Leerlijn</a>
+      <a href="#partners">Partners</a>
     </div>
   </nav>
   <!-- END NAVIGATION -->
 
   <!-- START HOMEPAGE ZANI en WAIL --> 
-  <div class="homePage">
+  <div class="homePage" id="home">
     <div class="container">
       <div class="background-image">
         <div class="header-one">
-          <h1><span class="red-color">INTERPROFESSIONEEL</span> ONDERWIJS</h1>
+          <h1><span class="red">INTERPROFESSIONEEL</span> ONDERWIJS</h1>
           </div>
-        
       </div>
       <img src="/img/homepage.png" style="width: 100%;">
     </div>
@@ -40,15 +39,50 @@
   <!-- END HOMEPAGE -->
 
   <!-- START SECOND PAGE  ABDELLA EN NAWFAL-->
-  <div class="secondPage">
-
+  <div class="secondPage" id="IPO">
+    <div class="ipo">
+      <div class="ipo-text">
+        <h1>WAT IS<span class="red"> IPO?</span></h1>
+        <p>Het begrip interprofessioneel verwijst naar de aanwezigheid van meerdere professionele groepen (geneeskunde,
+          kinesitherapie, verpleegkunde, voedings - en dieetkunde, …) die in interactie samen leren met de bedoeling om
+         <span class="red">samenwerking en kwaliteit</span> van zorg te verbeteren.
+        </p>
+      </div>
+      <div class="womans">
+        <div class="woman1">
+          <img src="img/foto.png">
+        </div>
+        <div class="woman2">
+          <img src="img/Foto2.png">
+        </div>
+        <div class="woman3">
+          <img src="img/Foto3.png">
+        </div>
+      </div>
+      <div class="doel-text">
+        <h2>Doelstellingen</h2>
+        <div class="doel-list">
+        <ul>
+            <li>Het kunnen evalueren van interprofessioneel teamwork.</li>
+            <li>leren om passend interprofessioneel te verwijzen.</li>
+            <li>Leren probleemoplossend te handelen in interprofessionele teams</li>
+            <li>Leren werken met interprofessionele zorgplannen</li>
+            <li>Elkaars competenties leren kennen en begrijpen</li>
+        </ul>
+      </div>
+      </div>
+    </div>
 
   </div>
   <!-- END SECOND PAGE -->
 
   <!-- START THIRD PAGE WAIL -->
-  <div class="thirdPage">
-
+  <div class="thirdPage" id="leerlijn">
+    <h2 class="fase1">FASE I</h2>
+    <div class="fotoFase1">
+      <img src="img/faseEen.png">
+      <p>INTERPROFESSIONELE <span class="red">KENNISMAKING</span> & BASISVAARDIGHEDEN</p>
+    </div>
 
 
   </div>
@@ -56,8 +90,114 @@
 
 
   <!-- SCHEMA  SETH-->
-  <div class="schemaPage">
-
+  <div class="schemaPage" id="partners">
+    <h1>Partners</h1>
+    <div class="conections">
+      <div class="IPOtoEHB">
+        <div class="EHBtoLeft1">
+          <div class="Left1toVPK">
+            <div class="Left1toVK">
+              <div class="EHBtoRight1">
+                <div class="Right1toBMLT">
+                  <div class="Right1toVDK">
+                    <div class="IPOtoVUB">
+                      <div class="VUBtoLeft2">
+                        <div class="Left2toGK">
+                          <div class="Left2toREVAKI">
+                            <div class="VUBtoRight2">
+                              <div class="Right2toSA">
+                                <div class="Right2toP">
+                                  <div class="Right2toF"></div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="dropdown">
+    <button class="btn IPO">IPO</button>
+    <div class="dropdown-content">
+      <img src="img/Logo.png" alt="IPO" width="50" height="50">
+      <div class="desc">Interprofessioneel Onderwijs</div>
+      </div>
+   </div>
+   <div class="dropdown">
+    <button class="btn EHB">EHB</button>
+    <div class="dropdown-content">
+      <img src="img/ehb.jpg" alt="EHB" width="100">
+      </div>
+   </div>
+   <div class="dropdown">
+    <button class="btn VUB">VUB</button>
+    <div class="dropdown-content">
+      <img src="img/vub.png" alt="VUB" width="100">
+      </div>
+   </div>
+   <div class="dropdown">
+    <button class="btn VPK">Verpleegkunde</button>
+    <div class="dropdown-content">
+      <img src="img/verpleegkunde.jpg" alt="Verpleegkunde" width="150" >
+      <div class="desc">Verpleegkunde</div>
+      </div>
+   </div>
+   <div class="dropdown">
+    <button class="btn VK">Vroedkunde</button>
+    <div class="dropdown-content">
+      <img src="img/vroedkunde.jpg" alt="Vroedkunde" width="150">
+      <div class="desc">Vroedkunde</div>
+      </div>
+   </div>
+   <div class="dropdown">
+    <button class="btn VDK">Voedings- en diëetkunde</button>
+    <div class="dropdown-content">
+      <img src="img/voeding-dieetkunde.jpg" alt="Voedingskunde" width="150">
+      </div>
+   </div>
+   <div class="dropdown">
+    <button class="btn BMLT">Biomedische laboratoriumtechnologie</button>
+    <div class="dropdown-content">
+      <img src="img/biomedisch-labo.jpg" alt="Labo" width="150">
+      </div>
+   </div>
+   <div class="dropdown">
+    <button class="btn GK">Geneeskunde</button>
+    <div class="dropdown-content">
+      <img src="img/geneeskunde.jpg" alt="Geneeskunde" width="150">
+      </div>
+   </div>
+   <div class="dropdown">
+    <button class="btn REVAKI">Revalidatiewetenschappen en kinesitherapie</button>
+    <div class="dropdown-content">
+      <img src="img/revalidatie&kine.jpg" alt="kine" width="150">
+      </div>
+   </div>
+   <div class="dropdown">
+    <button class="btn F">Farmacie</button>
+    <div class="dropdown-content">
+      <img src="img/farmacie.jpg" alt="farmacie" width="150">
+      </div>
+   </div>
+   <div class="dropdown">
+    <button class="btn P">Psychologie</button>
+    <div class="dropdown-content">
+      <img src="img/psycho.jpg" alt="Psychologie" width="150">
+      </div>
+   </div>
+   <div class="dropdown">
+    <button class="btn SA">Sociale agogiek</button>
+    <div class="dropdown-content">
+      <img src="img/socialeAgogiek.png" alt="Sociale agogiek" width="150">
+      </div>
+   </div>
   </div>
   <script src="js/index.js"></script>
 </body>
