final for week1 presentation

--- a/index.html
+++ b/index.html
@@ -50,29 +50,30 @@
       </div>
       <div class="womans">
         <div class="woman1">
-          <img src="img/foto.png">
+          <img src="img/Teamwork3.png">
         </div>
+        <div class="twoPics">
         <div class="woman2">
-          <img src="img/Foto2.png">
+          <img src="img/download (2).jpg">
         </div>
         <div class="woman3">
           <img src="img/Foto3.png">
         </div>
       </div>
+      </div>
       <div class="doel-text">
         <h2>Doelstellingen</h2>
         <div class="doel-list">
         <ul>
-            <li>Het kunnen evalueren van interprofessioneel teamwork.</li>
-            <li>leren om passend interprofessioneel te verwijzen.</li>
-            <li>Leren probleemoplossend te handelen in interprofessionele teams</li>
-            <li>Leren werken met interprofessionele zorgplannen</li>
-            <li>Elkaars competenties leren kennen en begrijpen</li>
+            <li>Het kunnen<span class="red"> evalueren</span> van interprofessioneel teamwork</li>
+            <li>leren om passend interprofessioneel te <span class="red">verwijzen</span></li>
+            <li>Leren <span class="red">probleemoplossend</span> te handelen in interprofessionele teams</li>
+            <li>Leren werken met interprofessionele <span class="red">zorgplannen</span></li>
+            <li>Elkaars <span class="red">competenties</span> leren kennen en begrijpen</li>
         </ul>
       </div>
       </div>
     </div>
-
   </div>
   <!-- END SECOND PAGE -->
 
