--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
   <!-- NAVIGATION -->
-  <div class="logo"><a href="index.html"><img src="/img/Logo.png"></a>
+  <div class="logo"><a href="index.html"><img src="img/Logo.png"></a>
   </div>
   <nav>
     <div class="topnav" id="myTopnav">
@@ -33,7 +33,7 @@
           <h1><span class="red">INTERPROFESSIONEEL</span> ONDERWIJS</h1>
           </div>
       </div>
-      <img src="/img/homepage.png" style="width: 100%;">
+      <img src="img/homepage.png" style="width: 100%;">
     </div>
   </div>
   <!-- END HOMEPAGE -->
