--- a/index.html
+++ b/index.html
@@ -78,128 +78,83 @@
   <!-- END SECOND PAGE -->
 
   <!-- START THIRD PAGE WAIL -->
+  <section class="fases">
   <div class="thirdPage" id="leerlijn">
     <h2 class="fase1">FASE I</h2>
     <div class="fotoFase1">
       <img src="img/faseEen.png">
       <p>INTERPROFESSIONELE <span class="red">KENNISMAKING</span> & BASISVAARDIGHEDEN</p>
     </div>
-
-
+  </section>
+  <section class="fases">
+  <div class="thirdPage" id="leerlijn">
+    <h2 class="fase1">FASE II</h2>
+    <div class="fotoFase1 tweedeFoto">
+      <img src="img/ZachteHanden.png">
+      <p class="tweedeParagraaf">INTERPROFESSIONELE <span class="red">ZORGTAKEN</span> IN STIMULATIESETTING</p>
+    </div>
+  </section>
+  
+  <div class="thirdPage" id="leerlijn">
+    <h2 class="fase1">FASE III</h2>
+    <div class="fotoFase1">
+      <img src="img/faseEen.png">
+      <p>INTERPROFESSIONELE <span class="red">KENNISMAKING</span> & BASISVAARDIGHEDEN</p>
+    </div>
+  
   </div>
   <!-- END THIRD PAGE -->
 
-
   <!-- SCHEMA  SETH-->
-  <div class="schemaPage" id="partners">
-    <h1>Partners</h1>
-    <div class="conections">
-      <div class="IPOtoEHB">
-        <div class="EHBtoLeft1">
-          <div class="Left1toVPK">
-            <div class="Left1toVK">
-              <div class="EHBtoRight1">
-                <div class="Right1toBMLT">
-                  <div class="Right1toVDK">
-                    <div class="IPOtoVUB">
-                      <div class="VUBtoLeft2">
-                        <div class="Left2toGK">
-                          <div class="Left2toREVAKI">
-                            <div class="VUBtoRight2">
-                              <div class="Right2toSA">
-                                <div class="Right2toP">
-                                  <div class="Right2toF"></div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
+  <div class="sticky-container">
+    <div class="sticky-outer">
+      <div class="sticky">
+        <svg width="0" height="0">
+          <defs>
+            <clipPath id="stickyClip" clipPathUnits="objectBoundingBox">
+              <path d="M 0 0 Q 0 0.69, 0.03 0.96 0.03 0.96, 1 0.96 Q 0.96 0.69, 0.96 0 0.96 0, 0 0"
+                stroke-linejoin="round" stroke-linecap="square" />
+            </clipPath>
+          </defs>
+        </svg>
+        <div class="sticky-content-ehb">
+          EHB <br> <br>
+          <ul class="betrokken-leertrajecten">
+            <li style="margin-left: 1em;"> - Verpleegkunde</li> <br>
+            <li style="margin-left: 1em;"> - Vroedkunde</li> <br>
+            <li style="margin-left: 1em;"> - Voedings- en diëetkunde</li> <br>
+            <li style="margin-left: 1em;"> - Biomedische laboratoriumtechnologie</li> <br>
+          </ul>
         </div>
       </div>
     </div>
-    <div class="dropdown">
-    <button class="btn IPO">IPO</button>
-    <div class="dropdown-content">
-      <img src="img/Logo.png" alt="IPO" width="50" height="50">
-      <div class="desc">Interprofessioneel Onderwijs</div>
-      </div>
-   </div>
-   <div class="dropdown">
-    <button class="btn EHB">EHB</button>
-    <div class="dropdown-content">
-      <img src="img/ehb.jpg" alt="EHB" width="100">
-      </div>
-   </div>
-   <div class="dropdown">
-    <button class="btn VUB">VUB</button>
-    <div class="dropdown-content">
-      <img src="img/vub.png" alt="VUB" width="100">
-      </div>
-   </div>
-   <div class="dropdown">
-    <button class="btn VPK">Verpleegkunde</button>
-    <div class="dropdown-content">
-      <img src="img/verpleegkunde.jpg" alt="Verpleegkunde" width="150" >
-      <div class="desc">Verpleegkunde</div>
-      </div>
-   </div>
-   <div class="dropdown">
-    <button class="btn VK">Vroedkunde</button>
-    <div class="dropdown-content">
-      <img src="img/vroedkunde.jpg" alt="Vroedkunde" width="150">
-      <div class="desc">Vroedkunde</div>
-      </div>
-   </div>
-   <div class="dropdown">
-    <button class="btn VDK">Voedings- en diëetkunde</button>
-    <div class="dropdown-content">
-      <img src="img/voeding-dieetkunde.jpg" alt="Voedingskunde" width="150">
-      </div>
-   </div>
-   <div class="dropdown">
-    <button class="btn BMLT">Biomedische laboratoriumtechnologie</button>
-    <div class="dropdown-content">
-      <img src="img/biomedisch-labo.jpg" alt="Labo" width="150">
-      </div>
-   </div>
-   <div class="dropdown">
-    <button class="btn GK">Geneeskunde</button>
-    <div class="dropdown-content">
-      <img src="img/geneeskunde.jpg" alt="Geneeskunde" width="150">
-      </div>
-   </div>
-   <div class="dropdown">
-    <button class="btn REVAKI">Revalidatiewetenschappen en kinesitherapie</button>
-    <div class="dropdown-content">
-      <img src="img/revalidatie&kine.jpg" alt="kine" width="150">
-      </div>
-   </div>
-   <div class="dropdown">
-    <button class="btn F">Farmacie</button>
-    <div class="dropdown-content">
-      <img src="img/farmacie.jpg" alt="farmacie" width="150">
-      </div>
-   </div>
-   <div class="dropdown">
-    <button class="btn P">Psychologie</button>
-    <div class="dropdown-content">
-      <img src="img/psycho.jpg" alt="Psychologie" width="150">
-      </div>
-   </div>
-   <div class="dropdown">
-    <button class="btn SA">Sociale agogiek</button>
-    <div class="dropdown-content">
-      <img src="img/socialeAgogiek.png" alt="Sociale agogiek" width="150">
-      </div>
-   </div>
   </div>
+
+  <div class="sticky-container">
+    <div class="sticky-outer">
+      <div class="sticky">
+        <svg width="0" height="0">
+          <defs>
+            <clipPath id="stickyClip" clipPathUnits="objectBoundingBox">
+              <path d="M 0 0 Q 0 0.69, 0.03 0.96 0.03 0.96, 1 0.96 Q 0.96 0.69, 0.96 0 0.96 0, 0 0"
+                stroke-linejoin="round" stroke-linecap="square" />
+            </clipPath>
+          </defs>
+        </svg>
+        <div class="sticky-content-vub">
+          VUB<br> <br>
+          <ul class="betrokken-leertrajecten">
+            <li style="margin-left: 1em;"> - Geneeskunde</li> <br>
+            <li style="margin-left: 1em;"> - Revalidatiewetenschappen en kinesitherapie</li> <br>
+            <li style="margin-left: 1em;"> - Farmacie</li> <br>
+            <li style="margin-left: 1em;"> - Psychologie</li> <br>
+            <li style="margin-left: 1em;"> - Sociale apogiek</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <script src="js/index.js"></script>
 </body>
 
