--- a/index.html
+++ b/index.html
@@ -86,29 +86,30 @@
       <p>INTERPROFESSIONELE <span class="red">KENNISMAKING</span> & BASISVAARDIGHEDEN</p>
     </div>
   </section>
+
   <section class="fases">
   <div class="thirdPage" id="leerlijn">
     <h2 class="fase1">FASE II</h2>
     <div class="fotoFase1 tweedeFoto">
-      <img src="img/ZachteHanden.png">
+      <img src="img/iStock-moeder-gezin-kind.jpg">
       <p class="tweedeParagraaf">INTERPROFESSIONELE <span class="red">ZORGTAKEN</span> IN STIMULATIESETTING</p>
     </div>
   </section>
   
   <div class="thirdPage" id="leerlijn">
     <h2 class="fase1">FASE III</h2>
-    <div class="fotoFase1">
-      <img src="img/faseEen.png">
-      <p>INTERPROFESSIONELE <span class="red">KENNISMAKING</span> & BASISVAARDIGHEDEN</p>
+    <div class="fotoFase1 derdeFoto">
+      <img src="img/ZachteHanden.png">
+      <p class="derdeParagraaf">INTERPROFESSIONELE <span class="red">ZORG</span> OP DE WERKVLOER</p>
     </div>
   
   </div>
   <!-- END THIRD PAGE -->
 
   <!-- SCHEMA  SETH-->
-  <div class="sticky-container">
+  <div class="sticky-container-ehb">
     <div class="sticky-outer">
-      <div class="sticky">
+      <div class="sticky-ehb">
         <svg width="0" height="0">
           <defs>
             <clipPath id="stickyClip" clipPathUnits="objectBoundingBox">
@@ -129,10 +130,11 @@
       </div>
     </div>
   </div>
+  <div class="spin">SAMENWERKINGSPARTNERS</div>
 
-  <div class="sticky-container">
+  <div class="sticky-container-vub">
     <div class="sticky-outer">
-      <div class="sticky">
+      <div class="sticky-vub">
         <svg width="0" height="0">
           <defs>
             <clipPath id="stickyClip" clipPathUnits="objectBoundingBox">
