New design week 2

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Document</title>
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://kit.fontawesome.com/9ab47f940e.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,140 +24,149 @@
     </div>
   </nav>
   <!-- END NAVIGATION -->
-
-  <!-- START HOMEPAGE ZANI en WAIL --> 
-  <div class="homePage" id="home">
-    <div class="container">
-      <div class="background-image">
-        <div class="header-one">
-          <h1><span class="red">INTERPROFESSIONEEL</span> ONDERWIJS</h1>
-          </div>
-      </div>
-      <img src="img/homepage.png" style="width: 100%;">
-    </div>
+  
+   <!-- START HOMEPAGE ZANI en WAIL --> 
+   <div class="homePage" id="home">
+    <video id="video-player" controls loop autoplay="autoplay">
+      <source src="Animatie_1 (1).mp4" type="video/mp4">
+    </video>
   </div>
   <!-- END HOMEPAGE -->
 
-  <!-- START SECOND PAGE  ABDELLA EN NAWFAL-->
-  <div class="secondPage" id="IPO">
-    <div class="ipo">
-      <div class="ipo-text">
-        <h1>WAT IS<span class="red"> IPO?</span></h1>
-        <p>Het begrip interprofessioneel verwijst naar de aanwezigheid van meerdere professionele groepen (geneeskunde,
-          kinesitherapie, verpleegkunde, voedings - en dieetkunde, …) die in interactie samen leren met de bedoeling om
-         <span class="red">samenwerking en kwaliteit</span> van zorg te verbeteren.
-        </p>
+  <!-- Wat is IPO -->
+  <div class="IPO" id="IPO">
+    <div class="wrapper">
+    <div class="ipo-container">
+      <div class="ipo-tekst">
+        <h2>Wat is <span class="red">IPO? </span></h2>
+        <p>Het begrip interprofessioneel verwijst naar de aanwezigheid van meerdere professionele groepen
+           (geneeskunde, kinesitherapie, verpleegkunde, voedings - en dieetkunde, …) die in interactie 
+           examen leren met de bedoeling om <span class="red">samenwerking
+            en kwaliteit</span> van zorg te verbeteren.</p>
       </div>
-      <div class="womans">
-        <div class="woman1">
-          <img src="img/Teamwork3.png">
-        </div>
-        <div class="twoPics">
-        <div class="woman2">
-          <img src="img/download (2).jpg">
-        </div>
-        <div class="woman3">
-          <img src="img/Foto3.png">
-        </div>
-      </div>
-      </div>
-      <div class="doel-text">
-        <h2>Doelstellingen</h2>
-        <div class="doel-list">
-        <ul>
-            <li>Het kunnen<span class="red"> evalueren</span> van interprofessioneel teamwork</li>
-            <li>leren om passend interprofessioneel te <span class="red">verwijzen</span></li>
-            <li>Leren <span class="red">probleemoplossend</span> te handelen in interprofessionele teams</li>
-            <li>Leren werken met interprofessionele <span class="red">zorgplannen</span></li>
-            <li>Elkaars <span class="red">competenties</span> leren kennen en begrijpen</li>
-        </ul>
-      </div>
+      <div class="ipo-foto">
+        <img src="img/Teamwork (1).png">
       </div>
     </div>
-  </div>
-  <!-- END SECOND PAGE -->
-
-  <!-- START THIRD PAGE WAIL -->
-  <section class="fases">
-  <div class="thirdPage" id="leerlijn">
-    <h2 class="fase1">FASE I</h2>
-    <div class="fotoFase1">
-      <img src="img/faseEen.png">
-      <p>INTERPROFESSIONELE <span class="red">KENNISMAKING</span> & BASISVAARDIGHEDEN</p>
-    </div>
-  </section>
-
-  <section class="fases">
-  <div class="thirdPage" id="leerlijn">
-    <h2 class="fase1">FASE II</h2>
-    <div class="fotoFase1 tweedeFoto">
-      <img src="img/iStock-moeder-gezin-kind.jpg">
-      <p class="tweedeParagraaf">INTERPROFESSIONELE <span class="red">ZORGTAKEN</span> IN STIMULATIESETTING</p>
-    </div>
-  </section>
-  
-  <div class="thirdPage" id="leerlijn">
-    <h2 class="fase1">FASE III</h2>
-    <div class="fotoFase1 derdeFoto">
-      <img src="img/ZachteHanden.png">
-      <p class="derdeParagraaf">INTERPROFESSIONELE <span class="red">ZORG</span> OP DE WERKVLOER</p>
-    </div>
-  
-  </div>
-  <!-- END THIRD PAGE -->
-
-  <!-- SCHEMA  SETH-->
-  <div class="sticky-container-ehb">
-    <div class="sticky-outer">
-      <div class="sticky-ehb">
-        <svg width="0" height="0">
-          <defs>
-            <clipPath id="stickyClip" clipPathUnits="objectBoundingBox">
-              <path d="M 0 0 Q 0 0.69, 0.03 0.96 0.03 0.96, 1 0.96 Q 0.96 0.69, 0.96 0 0.96 0, 0 0"
-                stroke-linejoin="round" stroke-linecap="square" />
-            </clipPath>
-          </defs>
-        </svg>
-        <div class="sticky-content-ehb">
-          EHB <br> <br>
-          <ul class="betrokken-leertrajecten">
-            <li style="margin-left: 1em;"> - Verpleegkunde</li> <br>
-            <li style="margin-left: 1em;"> - Vroedkunde</li> <br>
-            <li style="margin-left: 1em;"> - Voedings- en diëetkunde</li> <br>
-            <li style="margin-left: 1em;"> - Biomedische laboratoriumtechnologie</li> <br>
+    <hr>
+      <div class="doelen-container">
+        <div class="ipo-tekst margin-left">
+          <h2>Doelstellingen</h2>
+          <ul>
+            <li>Het kunnen <span class="red">evalueren</span> van interprofessioneel teamwork.</li>
+            <li>leren om passend interprofessioneel te <span class="red">verwijzen</span>.</li>
+            <li>Leren <span class="red">probleemoplossend</span> te handelen in interprofessionele teams.</li>
+            <li>Leren werken met interprofessionele <span class="red">zorgplannen</span>.</li>
+            <li>Elkaars <span class="red">competenties</span> leren kennen en begrijpen.</li>
           </ul>
         </div>
-      </div>
-    </div>
-  </div>
-  <div class="spin">SAMENWERKINGSPARTNERS</div>
-
-  <div class="sticky-container-vub">
-    <div class="sticky-outer">
-      <div class="sticky-vub">
-        <svg width="0" height="0">
-          <defs>
-            <clipPath id="stickyClip" clipPathUnits="objectBoundingBox">
-              <path d="M 0 0 Q 0 0.69, 0.03 0.96 0.03 0.96, 1 0.96 Q 0.96 0.69, 0.96 0 0.96 0, 0 0"
-                stroke-linejoin="round" stroke-linecap="square" />
-            </clipPath>
-          </defs>
-        </svg>
-        <div class="sticky-content-vub">
-          VUB<br> <br>
-          <ul class="betrokken-leertrajecten">
-            <li style="margin-left: 1em;"> - Geneeskunde</li> <br>
-            <li style="margin-left: 1em;"> - Revalidatiewetenschappen en kinesitherapie</li> <br>
-            <li style="margin-left: 1em;"> - Farmacie</li> <br>
-            <li style="margin-left: 1em;"> - Psychologie</li> <br>
-            <li style="margin-left: 1em;"> - Sociale apogiek</li>
-          </ul>
+        <div class="ipo-foto">
+          <img src="img/training-effectief-samenwerken.jpg" class="radius-foto">
         </div>
       </div>
     </div>
   </div>
+
+  <div class="red-block" id="leerlijn">
+    <div class="leerlijn-titel">
+      <h2>Leerlijn</h2>
+    </div>
+  </div>
+  <!-- END of second page -->
+
+  <!-- THIRD PAGE -->
+  <div class="cards">
+                <!-- Card -->
+                <div class="card">
+                    <div class="card-image">
+                      <i class="fas fa-comments"></i>
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">Fase I</h4>
+                        <p>Interprofessionele <span class="red">kennismaking</span> & basisvaardigheden</p>
+                    </div>
+                </div>
+                <!-- end of card -->
+
+                <!-- Card -->
+                <div class="card">
+                    <div class="card-image">
+                      <i class="fas fa-handshake"></i>
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">Fase II</h4>
+                        <p>Interprofessionele <span class="red">zorgtaken</span> in simulatiesetting</p>
+                    </div>
+                </div>
+                <!-- end of card -->
+
+
+                <!-- Card -->
+                <div class="card">
+                    <div class="card-image">
+                      <i class="fas fa-briefcase"></i>
+                    </div>
+                    <div class="card-body">
+                        <h4 class="card-title">Fase III</h4>
+                        <p>Interprofessionele <span class="red">zorg</span> op de <span class="red">werkvloer</span></p>
+                    </div>
+                </div>
+                <!-- end of card -->  
+                             
+</div> 
+<div class="hr-wrapper">
+<hr class="hr-margin-fases">
+</div>
+<!-- end of cards -->
+<!-- END THIRD PAGE -->
+
+<!-- START PARTNERS -->
+<div class="partners">
+  <img src="img/EHB-50fps.gif" class="ehb-gif">
+  <img src="img/VUB-50fps.gif" class="vub-gif">
+  <div class="wrapper wrapper-partner">
+    <h2>Samenwerkingspartners</h2>
+    <div class="ehb-container">
+      <div class="ehb-foto">
+        <img src="img/ehb schoolfoto.jpg" class="radius-foto">
+      </div>
+      <div class="ehb-tekst">
+        <p>De IPO werkgroep van de Universitaire 
+          Associatie Brussel (<span class="orange">UAB</span>) betreft een samenwerkingsverband tussen 
+          verschillende zorgopleidingen van de Vrije Universiteit Brussel (<span class="blue">VUB</span>) en de 
+          Erasmushogeschool (<span class="red">EhB</span>). <br> <br> De doelstelling van de werkgroep is 
+          het <span class="red">samenbrengen</span> van vertegenwoordigers <span class="red">van opleidingen</span> met studenten 
+          (toekomstige) zorgverleners om IPO in de respectievelijke curricula in te 
+          bouwen.</p>
+      </div>
+    </div>
+    <div class="vub-container">
+      <div class="vub-foto">
+        <img src="img/VUB campus.jpg" class="radius-foto">
+      </div>
+      <div class="vub-tekst">
+        <p>In IPO wordt er met, van en over elkaar geleerd zodat studenten 
+          zorgverleners vanaf de <span class="red">start van hun opleiding</span> leren interprofessioneel 
+          samen te werken.  Op die manier wordt de <span class="red">samenwerking op de werkvloer</span>  
+          gestimuleerd, hetgeen bijdraagt tot de kwaliteit van zorg.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- END PARTNERS -->
+
+<!-- Back to top button -->
+
+<button onclick="topFunction()" id="myBtn" title="Go to top" <i class="fas fa-angle-double-up"></i></button>
 
   <script src="js/index.js"></script>
+  <script type="text/javascript" src="vanilla-tilt.js"></script>
+  <script>
+    VanillaTilt.init(document.querySelectorAll(".card"), {
+    max: 15,
+    speed: 2500
+});
+  </script>
 </body>
 
 </html>
