--- a/index.html
+++ b/index.html
@@ -75,6 +75,20 @@
   <!-- END of second page -->
 
   <!-- THIRD PAGE -->
+  <div class="area" >
+    <ul class="circles">
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+    </ul>
+</div >
   <div class="cards">
                 <!-- Card -->
                 <div class="card">
@@ -121,7 +135,7 @@
 <!-- END THIRD PAGE -->
 
 <!-- START PARTNERS -->
-<div class="partners">
+<div class="partners" id="partners">
   <img src="img/EHB-50fps.gif" class="ehb-gif">
   <img src="img/VUB-50fps.gif" class="vub-gif">
   <div class="wrapper wrapper-partner">
@@ -152,6 +166,48 @@
       </div>
     </div>
   </div>
+</div>
+
+<div class="partners2">
+<div class="wrapper3">
+  <div class="UAB-logo">
+    <img src="img/UAB-logo.jpg">
+  </div>
+  <div class="partners2-grote-container">
+  <div class="ehb2-container containers">
+    <div class="ehb-logo2">
+      <img src="img/EHB-logo.jpg">
+    </div>
+    <div class="ehb-list">
+      <ul>
+        <li>Verpleegkunde</li>
+        <li>Vroedkunde</li>
+        <li>Voedings- en dieetkunde</li>
+        <li>biomedische labotechnologie</li>
+      </ul>
+    </div>
+  </div>
+  <div class="arrow-container containers">
+    <div class="arrow-foto">
+      <img src="img/ArrowBothSides.png">
+    </div>
+  </div>
+  <div class="vub2-container containers">
+    <div class="vub-logo2">
+      <img src="img/VUB-logo.jpg">
+    </div>
+    <div class="vub-list">
+      <ul>
+        <li>Geneeskunde</li>
+        <li>Revalidatie en kinesitherapie</li>
+        <li>Farmacie</li>
+        <li>Psychologie</li>
+        <li>Sociale agogiek</li>
+      </ul>
+    </div>
+  </div>
+</div>
+</div>
 </div>
 <!-- END PARTNERS -->
 
