--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <link href="css/reset.css" rel="stylesheet" />
   <link href="css/style.css" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/9ab47f940e.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/kute.js/2.0.0/kute.min.js"></script>
 </head>
 
 <body>
   <!-- NAVIGATION -->
+  <span id="home"></span>
   <div class="logo"><a href="index.html"><img src="img/Logo.png"></a>
   </div>
   <nav>
@@ -24,204 +26,281 @@
     </div>
   </nav>
   <!-- END NAVIGATION -->
-  
-   <!-- START HOMEPAGE ZANI en WAIL --> 
-   <div class="homePage" id="home">
-    <video id="video-player" controls loop autoplay="autoplay">
-      <source src="Animatie_1 (1).mp4" type="video/mp4">
-    </video>
+
+  <!-- START HOMEPAGE ZANI en WAIL -->
+  <section class="homePage">
+
+    <svg
+    id="visual"
+    viewBox="0 0 960 540"
+    width="1080"
+    height="540"
+    xmlns="http://www.w3.org/2000/svg"
+    xmlns:xlink="http://www.w3.org/1999/xlink"
+    version="1.1"
+  >
+    <g transform="translate(447.8299336819108 288.9238075637941)">
+      <path
+        id="blob1"
+        d="M107 -108.6C150.3 -63.6 205.2 -31.8 220.4 15.2C235.6 62.2 211.1 124.5 167.8 156.5C124.5 188.5 62.2 190.2 0.2 190C-61.8 189.8 -123.5 187.5 -147.2 155.5C-170.8 123.5 -156.4 61.8 -154.5 1.9C-152.6 -58 -163.3 -116 -139.6 -161C-116 -206 -58 -238 -13.1 -224.9C31.8 -211.8 63.6 -153.6 107 -108.6"
+        fill="#FFFFFF"
+      ></path>
+    </g>
+
+    <g
+      transform="translate(514.0358114499625 238.07162960424017)"
+      style="visibility: hidden"
+    >
+      <path
+        id="blob2"
+        d="M117.8 -117.3C140.8 -94.8 139.4 -47.4 136.3 -3.1C133.2 41.2 128.5 82.5 105.5 127.5C82.5 172.5 41.2 221.2 0 221.2C-41.2 221.2 -82.5 172.5 -120.3 127.5C-158.2 82.5 -192.6 41.2 -202.8 -10.3C-213.1 -61.8 -199.2 -123.5 -161.3 -146C-123.5 -168.5 -61.8 -151.8 -7.2 -144.6C47.4 -137.4 94.8 -139.8 117.8 -117.3"
+        fill="#FFFFFF"
+      ></path>
+    </g>
+  </svg>
+  <div class="custom-shape-divider-bottom-1643461390">
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M1200,0H0V120H281.94C572.9,116.24,602.45,3.86,602.45,3.86h0S632,116.24,923,120h277Z" class="shape-fill"></path>
+    </svg>
   </div>
+  </section>
   <!-- END HOMEPAGE -->
 
   <!-- Wat is IPO -->
-  <div class="IPO" id="IPO">
-    <div class="wrapper">
-    <div class="ipo-container">
-      <div class="ipo-tekst">
-        <h2>Wat is <span class="red">IPO? </span></h2>
-        <p>Het begrip interprofessioneel verwijst naar de aanwezigheid van meerdere professionele groepen
-           (geneeskunde, kinesitherapie, verpleegkunde, voedings - en dieetkunde, …) die in interactie 
-           examen leren met de bedoeling om <span class="red">samenwerking
-            en kwaliteit</span> van zorg te verbeteren.</p>
-      </div>
-      <div class="ipo-foto">
-        <img src="img/Teamwork (1).png">
+  <section>
+    <div class="IPO" id="IPO">
+      <div class="wrapper">
+        <div class="ipo-container">
+          <div class="ipo-tekst">
+            <h2>Wat is <span class="red">IPO? </span></h2>
+            <p>Het begrip interprofessioneel verwijst naar de aanwezigheid van meerdere professionele groepen
+              (geneeskunde, kinesitherapie, verpleegkunde, voedings - en dieetkunde, …) die in interactie
+              examen leren met de bedoeling om <span class="red">samenwerking
+                en kwaliteit</span> van zorg te verbeteren.</p>
+          </div>
+          <div class="ipo-foto">
+            <img src="img/Teamwork (1).png">
+          </div>
+        </div>
+        <hr>
+        <div class="doelen-container">
+          <div class="ipo-tekst margin-left">
+            <h2>Doelstellingen</h2>
+            <ul>
+              <li>Het kunnen <span class="red">evalueren</span> van interprofessioneel teamwork.</li>
+              <li>leren om passend interprofessioneel te <span class="red">verwijzen</span>.</li>
+              <li>Leren <span class="red">probleemoplossend</span> te handelen in interprofessionele teams.</li>
+              <li>Leren werken met interprofessionele <span class="red">zorgplannen</span>.</li>
+              <li>Elkaars <span class="red">competenties</span> leren kennen en begrijpen.</li>
+            </ul>
+          </div>
+          <div class="ipo-foto">
+            <img src="img/training-effectief-samenwerken.jpg" class="radius-foto">
+          </div>
+        </div>
       </div>
     </div>
-    <hr>
-      <div class="doelen-container">
-        <div class="ipo-tekst margin-left">
-          <h2>Doelstellingen</h2>
-          <ul>
-            <li>Het kunnen <span class="red">evalueren</span> van interprofessioneel teamwork.</li>
-            <li>leren om passend interprofessioneel te <span class="red">verwijzen</span>.</li>
-            <li>Leren <span class="red">probleemoplossend</span> te handelen in interprofessionele teams.</li>
-            <li>Leren werken met interprofessionele <span class="red">zorgplannen</span>.</li>
-            <li>Elkaars <span class="red">competenties</span> leren kennen en begrijpen.</li>
-          </ul>
-        </div>
-        <div class="ipo-foto">
-          <img src="img/training-effectief-samenwerken.jpg" class="radius-foto">
-        </div>
-      </div>
+   <section class="section-divider2">
+    <div class="custom-shape-divider-bottom-1643461391">
+      <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M1200,0H0V120H281.94C572.9,116.24,602.45,3.86,602.45,3.86h0S632,116.24,923,120h277Z" class="shape-fill"></path>
+      </svg>
     </div>
-  </div>
-
+   </section>
+  </section>
+  <!-- END of second page -->
+  <!-- Red stroke -->
   <div class="red-block" id="leerlijn">
     <div class="leerlijn-titel">
       <h2>Leerlijn</h2>
     </div>
   </div>
-  <!-- END of second page -->
+  <!-- End red stroke -->
 
   <!-- THIRD PAGE -->
-  <div class="area" >
+  <div class="area">
     <ul class="circles">
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
     </ul>
-</div >
+  </div>
   <div class="cards">
-                <!-- Card -->
-                <div class="card">
-                    <div class="card-image">
-                      <i class="fas fa-comments"></i>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Fase I</h4>
-                        <p>Interprofessionele <span class="red">kennismaking</span> & basisvaardigheden</p>
-                    </div>
-                </div>
-                <!-- end of card -->
-
-                <!-- Card -->
-                <div class="card">
-                    <div class="card-image">
-                      <i class="fas fa-handshake"></i>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Fase II</h4>
-                        <p>Interprofessionele <span class="red">zorgtaken</span> in simulatiesetting</p>
-                    </div>
-                </div>
-                <!-- end of card -->
-
-
-                <!-- Card -->
-                <div class="card">
-                    <div class="card-image">
-                      <i class="fas fa-briefcase"></i>
-                    </div>
-                    <div class="card-body">
-                        <h4 class="card-title">Fase III</h4>
-                        <p>Interprofessionele <span class="red">zorg</span> op de <span class="red">werkvloer</span></p>
-                    </div>
-                </div>
-                <!-- end of card -->  
-                             
-</div> 
-<div class="hr-wrapper">
-<hr class="hr-margin-fases">
-</div>
-<!-- end of cards -->
-<!-- END THIRD PAGE -->
-
-<!-- START PARTNERS -->
-<div class="partners" id="partners">
-  <img src="img/EHB-50fps.gif" class="ehb-gif">
-  <img src="img/VUB-50fps.gif" class="vub-gif">
-  <div class="wrapper wrapper-partner">
-    <h2>Samenwerkingspartners</h2>
-    <div class="ehb-container">
-      <div class="ehb-foto">
-        <img src="img/ehb schoolfoto.jpg" class="radius-foto">
+    <!-- Card -->
+    <div class="card">
+      <div class="card-image">
+        <i class="fas fa-comments"></i>
       </div>
-      <div class="ehb-tekst">
-        <p>De IPO werkgroep van de Universitaire 
-          Associatie Brussel (<span class="orange">UAB</span>) betreft een samenwerkingsverband tussen 
-          verschillende zorgopleidingen van de Vrije Universiteit Brussel (<span class="blue">VUB</span>) en de 
-          Erasmushogeschool (<span class="red">EhB</span>). <br> <br> De doelstelling van de werkgroep is 
-          het <span class="red">samenbrengen</span> van vertegenwoordigers <span class="red">van opleidingen</span> met studenten 
-          (toekomstige) zorgverleners om IPO in de respectievelijke curricula in te 
-          bouwen.</p>
+      <div class="card-body">
+        <h4 class="card-title">Fase I</h4>
+        <p>Interprofessionele <span class="red">kennismaking</span> & basisvaardigheden</p>
       </div>
     </div>
-    <div class="vub-container">
-      <div class="vub-foto">
-        <img src="img/VUB campus.jpg" class="radius-foto">
+    <!-- end of card -->
+
+    <!-- Card -->
+    <div class="card">
+      <div class="card-image">
+        <i class="fas fa-handshake"></i>
       </div>
-      <div class="vub-tekst">
-        <p>In IPO wordt er met, van en over elkaar geleerd zodat studenten 
-          zorgverleners vanaf de <span class="red">start van hun opleiding</span> leren interprofessioneel 
-          samen te werken.  Op die manier wordt de <span class="red">samenwerking op de werkvloer</span>  
-          gestimuleerd, hetgeen bijdraagt tot de kwaliteit van zorg.</p>
+      <div class="card-body">
+        <h4 class="card-title">Fase II</h4>
+        <p>Interprofessionele <span class="red">zorgtaken</span> in simulatiesetting</p>
+      </div>
+    </div>
+    <!-- end of card -->
+
+
+    <!-- Card -->
+    <div class="card">
+      <div class="card-image">
+        <i class="fas fa-briefcase"></i>
+      </div>
+      <div class="card-body">
+        <h4 class="card-title">Fase III</h4>
+        <p>Interprofessionele <span class="red">zorg</span> op de <span class="red">werkvloer</span></p>
+      </div>
+    </div>
+    <!-- end of card -->
+
+  </div>
+  <div class="hr-wrapper">
+    <hr class="hr-margin-fases">
+  </div>
+  <!-- end of cards -->
+  <!-- END THIRD PAGE -->
+
+  <!-- START PARTNERS -->
+  <div class="partners" id="partners">
+    <img src="img/EHB-50fps.gif" class="ehb-gif">
+    <img src="img/VUB-50fps.gif" class="vub-gif">
+    <div class="wrapper wrapper-partner">
+      <h2>Samenwerkingspartners</h2>
+      <div class="ehb-container">
+        <div class="ehb-foto">
+          <img src="img/ehb schoolfoto.jpg" class="radius-foto">
+        </div>
+        <div class="ehb-tekst">
+          <p>De IPO werkgroep van de Universitaire
+            Associatie Brussel (<span class="orange">UAB</span>) betreft een samenwerkingsverband tussen
+            verschillende zorgopleidingen van de Vrije Universiteit Brussel (<span class="blue">VUB</span>) en de
+            Erasmushogeschool (<span class="red">EhB</span>). <br> <br> De doelstelling van de werkgroep is
+            het <span class="red">samenbrengen</span> van vertegenwoordigers <span class="red">van opleidingen</span>
+            met studenten
+            (toekomstige) zorgverleners om IPO in de respectievelijke curricula in te
+            bouwen.</p>
+        </div>
+      </div>
+      <div class="vub-container">
+        <div class="vub-foto">
+          <img src="img/VUB campus.jpg" class="radius-foto">
+        </div>
+        <div class="vub-tekst">
+          <p>In IPO wordt er met, van en over elkaar geleerd zodat studenten
+            zorgverleners vanaf de <span class="red">start van hun opleiding</span> leren interprofessioneel
+            samen te werken. Op die manier wordt de <span class="red">samenwerking op de werkvloer</span>
+            gestimuleerd, hetgeen bijdraagt tot de kwaliteit van zorg.</p>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="partners2">
-<div class="wrapper3">
-  <div class="UAB-logo">
-    <img src="img/UAB-logo.jpg">
+  <div class="partners2">
+    <div class="wrapper3">
+      <div class="UAB-logo">
+        <img src="img/UAB-logo.jpg">
+      </div>
+      <div class="partners2-grote-container">
+        <div class="ehb2-container containers">
+          <div class="ehb-logo2">
+            <img src="img/EHB-logo.jpg">
+          </div>
+          <div class="ehb-list">
+            <ul>
+              <li>Verpleegkunde</li>
+              <li>Vroedkunde</li>
+              <li>Voedings- en dieetkunde</li>
+              <li>biomedische labotechnologie</li>
+            </ul>
+          </div>
+        </div>
+        <div class="arrow-container containers">
+          <div class="arrow-foto">
+            <img src="img/ArrowBothSides.png">
+          </div>
+        </div>
+        <div class="vub2-container containers">
+          <div class="vub-logo2">
+            <img src="img/VUB-logo.jpg">
+          </div>
+          <div class="vub-list">
+            <ul>
+              <li>Geneeskunde</li>
+              <li>Revalidatie en kinesitherapie</li>
+              <li>Farmacie</li>
+              <li>Psychologie</li>
+              <li>Sociale agogiek</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <div class="partners2-grote-container">
-  <div class="ehb2-container containers">
-    <div class="ehb-logo2">
-      <img src="img/EHB-logo.jpg">
-    </div>
-    <div class="ehb-list">
-      <ul>
-        <li>Verpleegkunde</li>
-        <li>Vroedkunde</li>
-        <li>Voedings- en dieetkunde</li>
-        <li>biomedische labotechnologie</li>
-      </ul>
-    </div>
-  </div>
-  <div class="arrow-container containers">
-    <div class="arrow-foto">
-      <img src="img/ArrowBothSides.png">
-    </div>
-  </div>
-  <div class="vub2-container containers">
-    <div class="vub-logo2">
-      <img src="img/VUB-logo.jpg">
-    </div>
-    <div class="vub-list">
-      <ul>
-        <li>Geneeskunde</li>
-        <li>Revalidatie en kinesitherapie</li>
-        <li>Farmacie</li>
-        <li>Psychologie</li>
-        <li>Sociale agogiek</li>
-      </ul>
-    </div>
-  </div>
-</div>
-</div>
-</div>
-<!-- END PARTNERS -->
+  <!-- END PARTNERS -->
 
-<!-- Back to top button -->
+  <!-- Back to top button -->
 
-<button onclick="topFunction()" id="myBtn" title="Go to top" <i class="fas fa-angle-double-up"></i></button>
+  <button onclick="topFunction()" id="myBtn" title="Go to top" <i class="fas fa-angle-double-up"></i></button>
 
   <script src="js/index.js"></script>
   <script type="text/javascript" src="vanilla-tilt.js"></script>
   <script>
     VanillaTilt.init(document.querySelectorAll(".card"), {
-    max: 15,
-    speed: 2500
-});
+      max: 15,
+      speed: 2500
+    });
+
+////////////////////////////////////
+///// svg animation (homePage) /////
+///////////////////////////////////
+const tween = KUTE.fromTo(
+  "#blob1",
+  { path: "#blob1" },
+  { path: "#blob2" },
+  { repeat: 999, duration: 7000, yoyo: true }
+);
+
+tween.start();
+
+///////////////////////////
+// Go back to top BUTTON //
+///////////////////////////
+//Get the button
+var mybutton = document.getElementById("myBtn");
+    
+// When the user scrolls down 200px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
   </script>
 </body>
 
